# gphoto2

./: Makefile.am  configure.ac
.github/workflows/: ccpp.yml
gphoto2/: Makefile.am  main.c
